--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </div>
     <div class="footer">
-            
+            Open sourced and coded by : <a href="https://github.com/stela-gif" style="color:white;">Stela Choane Borja</a>
     </div>
 </body>
 </html>
